--- a/Lab1-UI/src/main/res/layout-land/activity_comida.xml
+++ b/Lab1-UI/src/main/res/layout-land/activity_comida.xml
@@ -24,7 +24,7 @@
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:ems="10"
-        android:hint="@string/txt_name" />
+        android:hint="@string/s_name" />
 
     <TextView
         android:id="@+id/txtTipo"
@@ -32,7 +32,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_below="@+id/cheMañana"
-        android:text="@string/txt_type" />
+        android:text="@string/s_type" />
 
     <TextView
         android:id="@+id/txtHorario"
@@ -40,7 +40,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_below="@+id/ediNombre2"
-        android:text="@string/txt_schedule" />
+        android:text="@string/s_schedule" />
 
     <TextView
         android:id="@+id/txtTiempoc"
@@ -58,7 +58,7 @@
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:layout_marginTop="120dp"
-        android:text="@string/txt_time" />
+        android:text="@string/s_time" />
 
     <RadioGroup
         android:layout_width="126dp"
@@ -73,7 +73,7 @@
             android:layout_alignStart="@+id/cheMañana"
             android:layout_below="@+id/cheMañana"
             android:layout_weight="1"
-            android:text="@string/txt_btn_entry" />
+            android:text="@string/s_entry" />
 
         <RadioButton
             android:id="@+id/rdbPlato"
@@ -82,7 +82,7 @@
             android:layout_alignStart="@+id/cheTarde"
             android:layout_below="@+id/cheMañana"
             android:layout_weight="1"
-            android:text="@string/txt_btn_mainCourse" />
+            android:text="@string/s_mainCourse" />
     </RadioGroup>
 
     <CheckBox
@@ -92,7 +92,7 @@
         android:layout_alignParentStart="true"
         android:layout_below="@+id/ediNombre2"
         android:layout_marginStart="55dp"
-        android:text="@string/txt_chb_morning" />
+        android:text="@string/s_morning" />
 
     <CheckBox
         android:id="@+id/cheNoche"
@@ -101,7 +101,7 @@
         android:layout_alignParentStart="true"
         android:layout_below="@+id/ediNombre2"
         android:layout_marginStart="156dp"
-        android:text="@string/txt_chb_evening" />
+        android:text="@string/s_evening" />
 
     <CheckBox
         android:id="@+id/cheTarde"
@@ -109,7 +109,7 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/ediNombre2"
         android:layout_toEndOf="@+id/cheNoche"
-        android:text="@string/txt_chb_afternoon" />
+        android:text="@string/s_afternoon" />
 
     <EditText
         android:id="@+id/ediPrecio2"
@@ -118,7 +118,7 @@
         android:layout_alignParentStart="true"
         android:layout_below="@+id/txtTiempoc"
         android:ems="10"
-        android:hint="@string/txt_price"
+        android:hint="@string/s_price"
         android:inputType="textPersonName" />
 
     <EditText
@@ -128,7 +128,7 @@
         android:layout_alignEnd="@+id/cheTarde"
         android:layout_below="@+id/txtTiempoc"
         android:ems="10"
-        android:hint="@string/txt_ingredients" />
+        android:hint="@string/s_ingredients" />
 
     <Button
         android:id="@+id/btHora"
@@ -136,7 +136,7 @@
         android:layout_height="37dp"
         android:layout_alignBaseline="@+id/txtTiempoc"
         android:layout_toEndOf="@+id/txtTimpoMensaje"
-        android:text="@string/txt_schedule" />
+        android:text="@string/s_schedule" />
 
     <Button
         android:id="@+id/btnRegistrar2"
@@ -146,7 +146,7 @@
         android:layout_alignParentStart="true"
         android:layout_below="@+id/ediPrecio2"
         android:background="@color/colorPrimaryDark"
-        android:text="@string/txt_btn_register"
+        android:text="@string/s_register"
         android:textColor="#ffff" />
 
     <RelativeLayout
@@ -162,7 +162,7 @@
             android:layout_height="18dp"
             android:layout_alignParentStart="true"
             android:layout_below="@+id/btnRegistrar2"
-            android:text="@string/txt_name" />
+            android:text="@string/s_name" />
 
         <TextView
             android:id="@+id/txtmhora"
@@ -170,7 +170,7 @@
             android:layout_height="19dp"
             android:layout_alignParentStart="true"
             android:layout_below="@+id/txtmnombre"
-            android:text="@string/txt_schedule" />
+            android:text="@string/s_schedule" />
 
         <TextView
             android:id="@+id/txtmtipo"
@@ -178,7 +178,7 @@
             android:layout_height="18dp"
             android:layout_alignParentStart="true"
             android:layout_below="@+id/txtmhora"
-            android:text="@string/txt_type" />
+            android:text="@string/s_type" />
 
         <TextView
             android:id="@+id/txtmtiempo"
@@ -186,7 +186,7 @@
             android:layout_height="18dp"
             android:layout_alignParentStart="true"
             android:layout_below="@+id/txtmtipo"
-            android:text="@string/txt_time" />
+            android:text="@string/s_time" />
 
         <TextView
             android:id="@+id/txtmprecio"
@@ -194,7 +194,7 @@
             android:layout_height="19dp"
             android:layout_alignParentStart="true"
             android:layout_below="@+id/txtmtiempo"
-            android:text="@string/txt_price" />
+            android:text="@string/s_price" />
 
         <TextView
             android:id="@+id/txtIngredientesc"
@@ -209,7 +209,7 @@
             android:layout_height="20dp"
             android:layout_alignParentStart="true"
             android:layout_below="@+id/txtmprecio"
-            android:text="@string/txt_ingredients" />
+            android:text="@string/s_ingredients" />
 
         <TextView
             android:id="@+id/txtPrecioc"
