--- a/Lab2Activities/src/main/res/layout/activity_main.xml
+++ b/Lab2Activities/src/main/res/layout/activity_main.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -20,8 +20,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@id/txtBienvenido"
-        android:layout_marginTop="68dp"
-        android:src="@drawable/plato"/>
+        android:scaleType="centerCrop"
+        android:src="@drawable/welcome"
+        tools:layout_editor_absoluteX="0dp"
+        tools:layout_editor_absoluteY="0dp" />
 
     <Button
         android:id="@+id/btnServicios"
@@ -35,5 +37,4 @@
         android:textColor="#ffff"
         android:textSize="16sp"
         android:textStyle="bold" />
-
-</RelativeLayout>
+</android.support.constraint.ConstraintLayout>
