0. Foto galeria, validacion captura 1. Activity Usuario registrar: se implemento la busqueda de foto desde la galeria 2. En la clase LoginActivity: se validan los campos del usuario a capturar para bdrestaurant

--- a/Lab2Activities/src/main/res/layout/activity_login.xml
+++ b/Lab2Activities/src/main/res/layout/activity_login.xml
@@ -66,6 +66,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:background="@color/colorPrimary1"
+                android:onClick="onClick"
                 android:text="@string/s_entrar_loguin"
                 android:textColor="@android:color/background_light" />
 
