--- a/Lab2Activities/src/main/res/layout/activity_usuario_ativity.xml
+++ b/Lab2Activities/src/main/res/layout/activity_usuario_ativity.xml
@@ -13,6 +13,7 @@
         android:layout_height="101dp"
         android:layout_gravity="center"
         android:layout_margin="10dp"
+        android:onClick="onClick"
         app:srcCompat="@drawable/ic_person_red_24dp" />
 
     <TableLayout
