--- a/Lab2Activities/src/main/res/layout/fragment_perfil.xml
+++ b/Lab2Activities/src/main/res/layout/fragment_perfil.xml
@@ -10,7 +10,7 @@
     <!-- TODO: Update blank fragment layout -->
 
     <ImageView
-        android:id="@+id/imgPhoto2"
+        android:id="@+id/imgPhotoProfile"
         android:layout_width="132dp"
         android:layout_height="101dp"
         android:layout_gravity="center"
