--- a/Lab2Activities/src/main/res/menu/activity_servicios_navigation_drawer_drawer.xml
+++ b/Lab2Activities/src/main/res/menu/activity_servicios_navigation_drawer_drawer.xml
@@ -3,7 +3,7 @@
 
     <group android:checkableBehavior="single">
         <item
-            android:id="@+id/nav_plate"
+            android:id="@+id/nav_food"
             android:icon="@drawable/ic_restaurant_red_24dp"
             android:title="@string/s_plates_list" />
         <item
