--- a/Lab2Activities/src/main/res/menu/servicios_activity_navigation_drawer.xml
+++ b/Lab2Activities/src/main/res/menu/servicios_activity_navigation_drawer.xml
@@ -6,4 +6,10 @@
         android:orderInCategory="100"
         android:title="@string/s_close_navigation"
         app:showAsAction="never" />
+    <item
+        android:id="@+id/action_return"
+        android:orderInCategory="100"
+        android:icon="@drawable/ic_arrow_back_black_24dp"
+        android:title="@string/s_close_navigation"
+        app:showAsAction="ifRoom" />
 </menu>
