--- a/Lab2Activities/src/main/res/layout/activity_food.xml
+++ b/Lab2Activities/src/main/res/layout/activity_food.xml
@@ -4,39 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".FoodFragment"
-    tools:layout_editor_absoluteY="81dp">
-
-    <!-- TODO: Update blank fragment layout -->
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:gravity="center_horizontal"
-        android:orientation="vertical"
-        android:paddingLeft="5dp"
-        tools:layout_editor_absoluteX="101dp"
-        tools:layout_editor_absoluteY="0dp">
-
-        <ImageView
-            android:id="@+id/imgFood"
-            android:layout_width="141dp"
-            android:layout_height="49dp"
-            android:src="@drawable/food" />
-
-        <TableRow
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
-
-            <EditText
-                android:id="@+id/ediName_food"
-                android:layout_width="239dp"
-                android:layout_height="wrap_content"
-                android:ems="10"
-                android:hint="@string/s_name_food_frame"
-                android:inputType="textPersonName" />
-        </TableRow>
-    </LinearLayout>
+    tools:context=".FoodActivity">
 
     <LinearLayout
         android:id="@+id/linearLayout"
@@ -59,7 +27,7 @@
 
             <TableRow
                 android:layout_width="match_parent"
-                android:layout_height="match_parent" >
+                android:layout_height="match_parent">
 
                 <TextView
                     android:id="@+id/txtSchedule_food"
@@ -169,6 +137,7 @@
             android:layout_width="133dp"
             android:layout_height="wrap_content"
             android:background="@color/colorPrimary1"
+            android:onClick="onClick"
             android:text="@string/s_register_food_frame"
             android:textColor="@android:color/background_light" />
 
@@ -290,11 +259,40 @@
                     <TextView
                         android:id="@+id/txtIngredents_food_information"
                         android:layout_width="wrap_content"
-                        android:layout_height="wrap_content" />
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="5dp" />
                 </TableRow>
             </TableLayout>
         </LinearLayout>
 
     </LinearLayout>
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:gravity="center_horizontal"
+        android:orientation="vertical"
+        android:paddingLeft="5dp"
+        tools:layout_editor_absoluteX="101dp"
+        tools:layout_editor_absoluteY="0dp">
+
+        <ImageView
+            android:id="@+id/imgFood"
+            android:layout_width="141dp"
+            android:layout_height="49dp"
+            android:src="@drawable/food" />
+
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <EditText
+                android:id="@+id/ediName_food"
+                android:layout_width="239dp"
+                android:layout_height="wrap_content"
+                android:ems="10"
+                android:hint="@string/s_name_food_frame"
+                android:inputType="textPersonName" />
+        </TableRow>
+    </LinearLayout>
 </android.support.constraint.ConstraintLayout>
