--- a/Lab2Activities/src/main/res/layout/fragment_acerca_de.xml
+++ b/Lab2Activities/src/main/res/layout/fragment_acerca_de.xml
@@ -60,7 +60,7 @@
                 android:text="Este lugar es ideal para turistas y compartir en familia, su gastronomia esta inspirada en la rica comida colombina en el cua l predomina las carnes.es un lugar de ambiente fresco y como donde disfrutara de deliciosas carnes asada"
                 android:textAlignment="textStart"
                 android:textAllCaps="false"
-                android:textColor="@android:color/darker_gray"
+                android:textColor="@android:color/background_dark"
                 android:textStyle="italic" />
         </TableRow>
 
@@ -89,7 +89,7 @@
                 android:layout_height="match_parent"
                 android:text="Sobrebarriga delgada al carbon, Churrasco, Punta de anca, Lomo de cerdo, Churrasco de cerdo con BBQ de la casa."
                 android:textAllCaps="false"
-                android:textColor="@android:color/darker_gray"
+                android:textColor="@android:color/background_dark"
                 android:textStyle="bold" />
         </TableRow>
 
@@ -119,7 +119,7 @@
                 android:layout_height="match_parent"
                 android:text="Objetivo general: Adquirir conocimientos en el desarrollo de aplicaciones para dispositivos móviles."
                 android:textAllCaps="false"
-                android:textColor="@android:color/darker_gray"
+                android:textColor="@android:color/background_dark"
                 android:textStyle="bold" />
         </TableRow>
 
