--- a/Lab2Activities/src/main/res/layout-land/fragment_services_blank.xml
+++ b/Lab2Activities/src/main/res/layout-land/fragment_services_blank.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ServicesBlankFragment">
+    tools:context=".Fragment.ServicesBlankFragment">
 
     <!-- TODO: Update blank fragment layout -->
     <TableLayout
