--- a/Lab2Activities/src/main/res/layout/fragment_configuration.xml
+++ b/Lab2Activities/src/main/res/layout/fragment_configuration.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".ConfigurationFragment">
+    tools:context=".Fragment.ConfigurationFragment">
 
     <!-- TODO: Update blank fragment layout -->
 
