--- a/Lab2Activities/src/main/res/layout/item_drink_list.xml
+++ b/Lab2Activities/src/main/res/layout/item_drink_list.xml
@@ -26,7 +26,7 @@
                 android:id="@+id/txtName_item_drink"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
+                android:layout_marginBottom="5dp"
                 android:text="Nombre"
                 android:textColor="@android:color/background_dark"
                 android:textSize="18sp"
@@ -36,9 +36,8 @@
                 android:id="@+id/txtPrice_item_drink"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="15dp"
-                android:layout_marginRight="10dp"
-                android:text="Descripcion "
+                android:layout_marginBottom="3dp"
+                android:text="precio"
                 android:textColor="@android:color/background_dark"
                 android:textSize="14sp" />
 
