--- a/Lab2Activities/src/main/res/layout/app_bar_servicios_activity_navigation_drawer.xml
+++ b/Lab2Activities/src/main/res/layout/app_bar_servicios_activity_navigation_drawer.xml
@@ -24,14 +24,35 @@
     <include layout="@layout/content_servicios_activity_navigation_drawer" />
 
 
-    <android.support.design.widget.FloatingActionButton
-        android:id="@+id/Insert"
+    <com.getbase.floatingactionbutton.FloatingActionsMenu
+        android:id="@+id/fabGrupo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
-        android:layout_margin="@dimen/fab_margin"
-        app:backgroundTint="@color/colorPrimary1"
-        app:srcCompat="@drawable/insert" />
+        android:layout_margin="@dimen/fab_margin">
+
+        <com.getbase.floatingactionbutton.FloatingActionButton
+            android:id="@+id/fabDrink"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:fab_colorPressed="@android:color/holo_blue_bright"
+            app:fab_icon="@drawable/ic_restaurant_red_24dp"
+            app:fab_size="normal"
+            app:fab_title="@string/s_drink" />
+
+
+        <com.getbase.floatingactionbutton.FloatingActionButton
+            android:id="@+id/fabFood"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:fab_colorPressed="@android:color/holo_blue_bright"
+            app:fab_icon="@drawable/ic_local_bar_red_24dp"
+            app:fab_size="normal"
+            app:fab_title="@string/s_food" />
+
+
+    </com.getbase.floatingactionbutton.FloatingActionsMenu>
+
 
 
 
