1. Refactory Activity login, activity Usuario

--- a/lab3servicesgr02/src/main/res/layout/activity_login.xml
+++ b/lab3servicesgr02/src/main/res/layout/activity_login.xml
@@ -52,7 +52,7 @@
                 android:layout_marginLeft="10dp"
                 android:ems="10"
                 android:hint="@string/s_pass_loguin"
-                android:inputType="textPersonName" />
+                android:inputType="textPassword" />
         </TableRow>
 
         <TableRow
