--- a/lab3servicesgr02/src/main/res/layout/activity_usuario_ativity.xml
+++ b/lab3servicesgr02/src/main/res/layout/activity_usuario_ativity.xml
@@ -8,13 +8,13 @@
     tools:context=".UsuarioAtivity">
 
     <ImageView
-        android:id="@+id/imgPhoto"
+        android:id="@+id/imgPhotoUser"
         android:layout_width="120dp"
         android:layout_height="101dp"
         android:layout_gravity="center"
         android:layout_margin="10dp"
         android:onClick="onClick"
-        app:srcCompat="@drawable/ic_person_red_24dp" />
+        android:src="@drawable/user" />
 
     <TableLayout
         android:layout_width="match_parent"
@@ -71,7 +71,7 @@
             android:gravity="center">
 
             <Button
-                android:id="@+id/butLoguin2"
+                android:id="@+id/butRegistrarUser"
                 android:layout_width="125dp"
                 android:layout_height="wrap_content"
                 android:background="@color/colorPrimary1"
