--- a/lab3servicesgr02/src/main/res/layout/nav_header_servicios_activity_navigation_drawer.xml
+++ b/lab3servicesgr02/src/main/res/layout/nav_header_servicios_activity_navigation_drawer.xml
@@ -14,11 +14,12 @@
     android:theme="@style/ThemeOverlay.AppCompat.Dark">
 
     <ImageView
-        android:id="@+id/imageView"
+        android:id="@+id/imageViewLogo"
         android:layout_width="129dp"
         android:layout_height="81dp"
         android:contentDescription="@string/nav_header_desc"
         android:paddingTop="@dimen/nav_header_vertical_spacing"
+        android:onClick="onClick"
         app:srcCompat="@drawable/logo3" />
 
     <TextView
