--- a/lab3servicesgr02/src/main/res/layout/item_food_list.xml
+++ b/lab3servicesgr02/src/main/res/layout/item_food_list.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:orientation="vertical"
     android:layout_height="match_parent">
@@ -49,8 +50,8 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="1dp"
-        android:background="@color/colorPrimary"
         android:layout_below="@+id/idImagen"
-        android:layout_marginTop="11dp" />
+        android:layout_marginTop="11dp"
+        android:background="#eae8e8" />
 
 </LinearLayout>
