--- a/lab3servicesgr02/src/main/res/menu/activity_servicios_navigation_drawer_drawer.xml
+++ b/lab3servicesgr02/src/main/res/menu/activity_servicios_navigation_drawer_drawer.xml
@@ -15,6 +15,10 @@
             android:icon="@drawable/ic_person_red_24dp"
             android:title="@string/s_profile" />
         <item
+            android:id="@+id/nav_syncronizar"
+            android:icon="@drawable/ic_cached_black_24dp"
+            android:title="@string/s_web_syncronizar"/>
+        <item
             android:id="@+id/nav_configuration"
             android:icon="@drawable/ic_build_red_24dp"
             android:title="@string/s_configuration" />
