--- a/Lab4FCM/src/main/res/layout/activity_login.xml
+++ b/Lab4FCM/src/main/res/layout/activity_login.xml
@@ -27,16 +27,16 @@
         </TableRow>
 
         <TableRow
-            android:layout_width="match_parent"
+            android:layout_width="327dp"
             android:layout_height="match_parent">
 
             <EditText
                 android:id="@+id/ediName_loguin"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="361dp"
+                android:layout_height="match_parent"
                 android:layout_marginLeft="10dp"
                 android:ems="10"
-                android:hint="@string/s_name_loguin"
+                android:hint="@string/s_email_user"
                 android:inputType="textPersonName" />
 
         </TableRow>
@@ -58,50 +58,23 @@
         <TableRow
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_margin="20dp"
             android:gravity="center">
-
-            <Button
-                android:id="@+id/butLoguin"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:background="@color/colorPrimary1"
-                android:onClick="onClick"
-                android:text="@string/s_entrar_loguin"
-                android:textColor="@android:color/background_light" />
 
         </TableRow>
 
 
-        <TableRow
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_margin="0dp"
-            android:gravity="center">
-
-
-            <TextView
-                android:id="@+id/txtCreateUser"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:gravity="center"
-                android:onClick="onCreateClick"
-                android:text="@string/s_create_Account"
-                android:textColor="@android:color/holo_blue_dark"
-                android:textStyle="italic" />
-
-            <ImageView
-                android:id="@+id/imageView"
-                android:layout_width="5dp"
-                android:layout_height="10dp"
-                android:scaleType="fitCenter"
-                android:visibility="invisible"
-                app:srcCompat="@drawable/user" />
-        </TableRow>
+        <com.google.android.gms.common.SignInButton
+            android:id="@+id/signInButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:onClick="onClick"
+            android:layout_centerHorizontal="false"
+            android:layout_centerVertical="false"
+            android:layout_marginEnd="10dp"
+            android:layout_marginStart="10dp" />
 
 
     </TableLayout>
-
 
 
 </LinearLayout>
