--- a/Lab4FCM/src/main/res/layout/activity_drink.xml
+++ b/Lab4FCM/src/main/res/layout/activity_drink.xml
@@ -13,7 +13,8 @@
         android:orientation="vertical"
         android:paddingLeft="5dp"
         tools:layout_editor_absoluteX="101dp"
-        tools:layout_editor_absoluteY="0dp">
+        tools:layout_editor_absoluteY="0dp"
+        tools:ignore="MissingConstraints">
 
         <ImageView
             android:id="@+id/imgDrik_register"
