--- a/Lab4FCM/src/main/res/layout/activity_usuario_ativity.xml
+++ b/Lab4FCM/src/main/res/layout/activity_usuario_ativity.xml
@@ -8,7 +8,7 @@
     tools:context=".UsuarioAtivity">
 
     <ImageView
-        android:id="@+id/imgPhotoUser"
+        android:id="@+id/imgPhotoUserR"
         android:layout_width="120dp"
         android:layout_height="101dp"
         android:layout_gravity="center"
@@ -26,7 +26,7 @@
             android:layout_marginTop="10dp">
 
             <EditText
-                android:id="@+id/ediNameUser"
+                android:id="@+id/ediNameUserR"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="5dp"
@@ -41,7 +41,7 @@
             android:layout_height="match_parent" >
 
             <EditText
-                android:id="@+id/ediEmailUser"
+                android:id="@+id/ediEmailUserR"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="5dp"
@@ -55,7 +55,7 @@
             android:layout_height="match_parent" >
 
             <EditText
-                android:id="@+id/ediPasswordUser"
+                android:id="@+id/ediPasswordUserR"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="5dp"
