--- a/Lab4FCM/src/main/res/layout/fragment_configuration.xml
+++ b/Lab4FCM/src/main/res/layout/fragment_configuration.xml
@@ -25,15 +25,17 @@
 
             <TextView
                 android:id="@+id/textView5"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="100dp"
+                android:layout_height="match_parent"
+                android:gravity="center_vertical|fill_vertical"
+                android:paddingLeft="10dp"
                 android:text="@string/s_profile"
                 android:textColor="@android:color/background_dark" />
 
             <ImageView
                 android:id="@+id/imgProfileEdition"
-                android:layout_width="wrap_content"
-                android:layout_height="30dp"
+                android:layout_width="60dp"
+                android:layout_height="60dp"
                 android:background="@drawable/ic_person_red_24dp"
                 android:onClick="onClick"
                 android:scaleType="center"
@@ -74,7 +76,7 @@
 
             <CheckBox
                 android:id="@+id/cheAuthorization_notification"
-                android:layout_width="match_parent"
+                android:layout_width="211dp"
                 android:layout_height="wrap_content"
                 android:text="@string/s_authorization_notification" />
         </TableRow>
