--- a/Lab4FCM/src/main/res/layout/activity_usuario_ativity.xml
+++ b/Lab4FCM/src/main/res/layout/activity_usuario_ativity.xml
@@ -7,6 +7,46 @@
     android:layout_height="match_parent"
     tools:context=".UsuarioAtivity">
 
+    <TableRow
+        android:layout_width="match_parent"
+        android:layout_height="56dp"
+        android:background="@android:color/holo_red_dark"
+        android:gravity="right">
+
+        <TextView
+            android:id="@+id/texManage"
+            android:layout_width="186dp"
+            android:layout_height="match_parent"
+            android:gravity="center"
+            android:text="@string/s_gestonar"
+            android:textAlignment="textStart"
+            android:textColor="@android:color/background_light"
+            android:textSize="18sp"
+            tools:ignore="RtlCompat" />
+
+        <ImageView
+            android:id="@+id/imaNew"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:onClick="onClick"
+            android:src="@drawable/add" />
+
+        <ImageView
+            android:id="@+id/imaSave"
+            android:layout_width="62dp"
+            android:onClick="onClick"
+            android:layout_height="match_parent"
+            android:src="@drawable/save" />
+
+        <ImageView
+            android:id="@+id/imaDelete"
+            android:layout_width="59dp"
+            android:onClick="onClick"
+            android:layout_height="match_parent"
+            android:src="@drawable/delete" />
+
+    </TableRow>
+
     <ImageView
         android:id="@+id/imgPhotoUserR"
         android:layout_width="120dp"
@@ -70,14 +110,6 @@
             android:layout_marginTop="30dp"
             android:gravity="center">
 
-            <Button
-                android:id="@+id/butRegistrarUser"
-                android:layout_width="125dp"
-                android:layout_height="wrap_content"
-                android:background="@color/colorPrimary1"
-                android:onClick="onClick"
-                android:text="@string/s_register_user"
-                android:textColor="@android:color/background_light" />
         </TableRow>
     </TableLayout>
 </LinearLayout>
