--- a/Lab4FCM/src/main/res/layout/fragment_loguin_google.xml
+++ b/Lab4FCM/src/main/res/layout/fragment_loguin_google.xml
@@ -24,14 +24,6 @@
             android:layout_height="match_parent"
             android:layout_marginTop="10dp">
 
-            <EditText
-                android:id="@+id/ediName_loguinG"
-                android:layout_width="365dp"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="10dp"
-                android:ems="10"
-                android:hint="@string/s_email_user"
-                android:inputType="textPersonName" />
         </TableRow>
 
         <TableRow
@@ -39,14 +31,6 @@
             android:layout_height="match_parent"
             android:layout_marginTop="10dp">
 
-            <EditText
-                android:id="@+id/ediPass_loguinG"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="10dp"
-                android:ems="10"
-                android:hint="@string/s_pass_loguin"
-                android:inputType="textPassword" />
         </TableRow>
 
 
@@ -58,6 +42,7 @@
             android:layout_centerVertical="false"
             android:layout_marginEnd="10dp"
             android:layout_marginStart="10dp"
+            android:layout_marginTop="100dp"
             android:onClick="onClick"
             tools:ignore="OnClick" />
 
