--- a/Lab4FCM/src/main/res/layout/activity_usuario_ativity.xml
+++ b/Lab4FCM/src/main/res/layout/activity_usuario_ativity.xml
@@ -110,6 +110,10 @@
             android:layout_marginTop="30dp"
             android:gravity="center">
 
+            <TextView
+                android:id="@+id/texId"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
         </TableRow>
     </TableLayout>
 </LinearLayout>
